# peloton-pal

./: .gitignore  Home.py  README.md  agent.py  agent_testing.ipynb  app.py  goals.json  interface.py  llm.py  peloton.py  peloton_classes.json  prompts.py  pyproject.toml  schemas.py  tools.py  user_workouts.json
pages/: 1_Manage_Goals.py  1_Update_Preferences.py
