[tool.poetry]
name = "pelo-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pelo_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
streamlit = "^1.27.2"
langchain = "^0.0.345"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
