[tool.poetry]
name = "pelo-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pelo_llm"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
streamlit = "^1.27.2"
anthropic = "^0.28.1"
openai = "1.57.3"
pydantic-ai = "0.0.12"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
